bindings/bindings.odin


    @(link_name = "wgpuBindGroupLayoutSetLabel")
    bind_group_layout_set_label :: proc(bind_group_layout: Bind_Group_Layout, label: cstring) ---
    @(link_name = "wgpuBindGroupLayoutReference")
    bind_group_layout_reference :: proc(bind_group_layout: Bind_Group_Layout) ---
    @(link_name = "wgpuBindGroupLayoutRelease")
    bind_group_layout_release :: proc(bind_group_layout: Bind_Group_Layout) ---

    // Methods of Buffer


    @(link_name = "wgpuBufferDestroy")
    buffer_destroy :: proc(buffer: Buffer) ---
    @(link_name = "wgpuBufferGetConstMappedRange")
    buffer_get_const_mapped_range :: proc(buffer: Buffer, offset, size: c.size_t) -> rawptr ---
    @(link_name = "wgpuBufferGetMapState")
    buffer_get_map_state :: proc(buffer: Buffer) -> Buffer_Map_State ---
    @(link_name = "wgpuBufferGetMappedRange")
    buffer_get_mapped_range :: proc(buffer: Buffer, offset, size: c.size_t) -> rawptr ---
    @(link_name = "wgpuBufferGetSize")
    buffer_get_size :: proc(buffer: Buffer) -> c.uint64_t ---
    @(link_name = "wgpuBufferGetUsage")
    buffer_get_usage :: proc(buffer: Buffer) -> Buffer_Usage ---
    @(link_name = "wgpuBufferMapAsync")
    buffer_map_async :: proc(buffer: Buffer, mode: Map_Mode_Flags, offset, size: c.size_t, callback: Buffer_Map_Callback, user_data: rawptr) ---
    @(link_name = "wgpuBufferSetLabel")
    buffer_set_label :: proc(buffer: Buffer, label: cstring) ---
    @(link_name = "wgpuBufferUnmap")
    buffer_unmap :: proc(buffer: Buffer) ---
    @(link_name = "wgpuBufferReference")
    buffer_reference :: proc(buffer: Buffer) ---
    @(link_name = "wgpuBufferRelease")
    buffer_release :: proc(buffer: Buffer) ---

    // Methods of CommandBuffer


    @(link_name = "wgpuCommandBufferSetLabel")
    command_buffer_set_label :: proc(command_buffer: Command_Buffer, label: cstring) ---
    @(link_name = "wgpuCommandBufferReference")
    command_buffer_reference :: proc(command_buffer: Command_Buffer) ---
    @(link_name = "wgpuCommandBufferRelease")
    command_buffer_release :: proc(command_buffer: Command_Buffer) ---

    // Methods of CommandEncoder


    @(link_name = "wgpuCommandEncoderBeginComputePass")
    command_encoder_begin_compute_pass :: proc(command_encoder: Command_Encoder, descriptor: ^Compute_Pass_Descriptor) -> Compute_Pass_Encoder ---
    @(link_name = "wgpuCommandEncoderBeginRenderPass")
    command_encoder_begin_render_pass :: proc(command_encoder: Command_Encoder, descriptor: ^Render_Pass_Descriptor) -> Render_Pass_Encoder ---
    @(link_name = "wgpuCommandEncoderClearBuffer")
    command_encoder_clear_buffer :: proc(command_encoder: Command_Encoder, buffer: Buffer, offset, size: c.uint64_t) ---
    @(link_name = "wgpuCommandEncoderCopyBufferToBuffer")
    command_encoder_copy_buffer_to_buffer :: proc(command_encoder: Command_Encoder, source: Buffer, sourceOffset: c.uint64_t, destination: Buffer, destinationOffset: c.uint64_t, size: c.uint64_t) ---
    @(link_name = "wgpuCommandEncoderCopyBufferToTexture")
    command_encoder_copy_buffer_to_texture :: proc(command_encoder: Command_Encoder, source: ^Image_Copy_Buffer, destination: ^Image_Copy_Texture, copy_size: ^Extent_3D) ---
    @(link_name = "wgpuCommandEncoderCopyTextureToBuffer")
    command_encoder_copy_texture_to_buffer :: proc(command_encoder: Command_Encoder, source: ^Image_Copy_Texture, destination: ^Image_Copy_Buffer, copy_size: ^Extent_3D) ---
    @(link_name = "wgpuCommandEncoderCopyTextureToTexture")
    command_encoder_copy_texture_to_texture :: proc(command_encoder: Command_Encoder, source: ^Image_Copy_Texture, destination: ^Image_Copy_Texture, copy_size: ^Extent_3D) ---
    @(link_name = "wgpuCommandEncoderFinish")
    command_encoder_finish :: proc(command_encoder: Command_Encoder, descriptor: ^Command_Buffer_Descriptor) -> Command_Buffer ---
    @(link_name = "wgpuCommandEncoderInsertDebugMarker")
    command_encoder_insert_debug_marker :: proc(command_encoder: Command_Encoder, marker_label: cstring) ---
    @(link_name = "wgpuCommandEncoderPopDebugGroup")
    command_encoder_pop_debug_group :: proc(command_encoder: Command_Encoder) ---
    @(link_name = "wgpuCommandEncoderPushDebugGroup")
    command_encoder_push_debug_group :: proc(command_encoder: Command_Encoder, group_label: cstring) ---
    @(link_name = "wgpuCommandEncoderResolveQuerySet")
    command_encoder_resolve_query_set :: proc(command_encoder: Command_Encoder, query_set: Query_Set, first_query: c.uint32_t, query_count: c.uint32_t, destination: Buffer, destination_offset: c.uint64_t) ---
    @(link_name = "wgpuCommandEncoderSetLabel")
    command_encoder_set_label :: proc(command_encoder: Command_Encoder, label: cstring) ---
    @(link_name = "wgpuCommandEncoderWriteTimestamp")
    command_encoder_write_timestamp :: proc(command_encoder: Command_Encoder, query_set: Query_Set, query_index: c.uint32_t) ---
    @(link_name = "wgpuCommandEncoderReference")
    command_encoder_reference :: proc(command_encoder: Command_Encoder) ---
    @(link_name = "wgpuCommandEncoderRelease")
    command_encoder_release :: proc(command_encoder: Command_Encoder) ---

    // Methods of ComputePassEncoder


    @(link_name = "wgpuComputePassEncoderBeginPipelineStatisticsQuery")
    compute_pass_encoder_begin_pipeline_statistics_query :: proc(compute_pass_encoder: Compute_Pass_Encoder, query_set: Query_Set, query_index: c.uint32_t) ---
    @(link_name = "wgpuComputePassEncoderDispatchWorkgroups")
    compute_pass_encoder_dispatch_workgroups :: proc(compute_pass_encoder: Compute_Pass_Encoder, workgroup_count_x, workgroup_count_y, workgroup_count_z: c.uint32_t) ---
    @(link_name = "wgpuComputePassEncoderDispatchWorkgroupsIndirect")
    compute_pass_encoder_dispatch_workgroups_indirect :: proc(compute_pass_encoder: Compute_Pass_Encoder, indirect_buffer: Buffer, indirect_offset: c.uint64_t) ---
    @(link_name = "wgpuComputePassEncoderEnd")
    compute_pass_encoder_end :: proc(compute_pass_encoder: Compute_Pass_Encoder) ---
    @(link_name = "wgpuComputePassEncoderEndPipelineStatisticsQuery")
    compute_pass_encoder_end_pipeline_statistics_query :: proc(compute_pass_encoder: Compute_Pass_Encoder) ---
    @(link_name = "wgpuComputePassEncoderInsertDebugMarker")
    compute_pass_encoder_insert_debug_marker :: proc(compute_pass_encoder: Compute_Pass_Encoder, marker_label: cstring) ---
    @(link_name = "wgpuComputePassEncoderPopDebugGroup")
    compute_pass_encoder_pop_debug_group :: proc(compute_pass_encoder: Compute_Pass_Encoder) ---
    @(link_name = "wgpuComputePassEncoderPushDebugGroup")
    compute_pass_encoder_push_debug_group :: proc(compute_pass_encoder: Compute_Pass_Encoder, group_label: cstring) ---
    @(link_name = "wgpuComputePassEncoderSetBindGroup")
    compute_pass_encoder_set_bind_group :: proc(compute_pass_encoder: Compute_Pass_Encoder, group_index: c.uint32_t, group: Bind_Group, dynamic_offset_count: c.size_t, dynamic_offsets: ^c.uint32_t) ---
    @(link_name = "wgpuComputePassEncoderSetLabel")
    compute_pass_encoder_set_label :: proc(compute_pass_encoder: Compute_Pass_Encoder, label: cstring) ---
    @(link_name = "wgpuComputePassEncoderSetPipeline")
    compute_pass_encoder_set_pipeline :: proc(compute_pass_encoder: Compute_Pass_Encoder, pipeline: Compute_Pipeline) ---
    @(link_name = "wgpuComputePassEncoderReference")
    compute_pass_encoder_reference :: proc(compute_pass_encoder: Compute_Pass_Encoder) ---
    @(link_name = "wgpuComputePassEncoderRelease")
    compute_pass_encoder_release :: proc(compute_pass_encoder: Compute_Pass_Encoder) ---

    // Methods of ComputePipeline


    @(link_name = "wgpuComputePipelineGetBindGroupLayout")
    compute_pipeline_get_bind_group_layout :: proc(compute_pipeline: Compute_Pipeline, groupIndex: c.uint32_t) -> Bind_Group_Layout ---
    @(link_name = "wgpuComputePipelineSetLabel")
    compute_pipeline_set_label :: proc(compute_pipeline: Compute_Pipeline, label: cstring) ---
    @(link_name = "wgpuComputePipelineReference")
    compute_pipeline_reference :: proc(compute_pipeline: Compute_Pipeline) ---
    @(link_name = "wgpuComputePipelineRelease")
    compute_pipeline_release :: proc(compute_pipeline: Compute_Pipeline) ---

    // Methods of Device

